<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Contact List</string>
<string name="action_settings">Settings</string>
<string name="Add_New">Add New</string>
<string name="edit">Edit Contact</string>
<string name="delete">Delete Contact</string>
<string name="title_activity_show_contact">Contacts</string>
<string name="name">Name</string>
<string name="phone">Phone</string>
<string name="email">Email</string>
<string name="City">City</string>
<string name="country">Country</string>
<string name="save">Save Contact</string>
<string name="deleteContact">Are you sure, you want to delete it?</string>
<string name="yes">Yes</string>
<string name="no">No</string>
</resources>