<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Contacts" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/editTextCity"
            android:layout_alignLeft="@+id/editTextCity"
            android:layout_alignStart="@+id/editTextCity" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textColor="#0000ff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="run"
            android:text="@string/save"
            android:background="#f0f272"
            android:layout_below="@+id/editTextEmail"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextEmail"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/email"
            android:textColor="#0000ff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPhone"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/phone"
            android:textColor="#0000ff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextEmail"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/City"
            android:textColor="#0000ff"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextPhone"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextCity"
            android:layout_below="@+id/editTextName"
            android:ems="10"
            android:inputType="phone|text" />



        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:id="@+id/imageV"
            android:background="#7ddff1"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true" />



        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Find Location"
            android:id="@+id/button_find"
            android:background="#00ff00"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp" />


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="280dp"
            android:layout_height="180dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take Picture"
            android:id="@+id/cam_button"
            android:layout_below="@+id/imageV"
            android:layout_centerHorizontal="true"
            android:onClick="Camera"/>


    </RelativeLayout>








</ScrollView>
